/*
** EPITECH PROJECT, 2024
** Untitled (Workspace)
** File description:
** ColourValues.hpp
*/

#pragma once
namespace GUI
{
    namespace Enums
    {
        enum class ColourValues {
            CRed,
            CGreen,
            CBlue,
            CAlpha
        };
    }
}
