/*
** EPITECH PROJECT, 2024
** Untitled (Workspace)
** File description:
** ItemType.hpp
*/

#pragma once
namespace GUI
{
    namespace Enums
    {
        enum class ItemType {
            ItemEND,
            ItemNONE,
            ItemText,
            ItemMusic,
            ItemAsset,
            ItemSprite
        };
    }
}
