/*
** EPITECH PROJECT, 2024
** Untitled (Workspace)
** File description:
** ShapeTypes.hpp
*/

#pragma once
namespace GUI
{
    namespace Enums
    {
        enum class ShapeType {
            Circle,
            Rectangle,
            Triangle,
            Polygon
        };
    }
}
