/*
** EPITECH PROJECT, 2024
** rtype (Workspace)
** File description:
** Main.hpp
*/

#pragma once

namespace GUI
{
    class Main {
        public:
        Main();
        ~Main();
    };
}
