@startuml Updated GUI Module Design

title "The design of the GUI window"

namespace GUI {
    namespace sf {
        class Text {}
        class Font {}
        class Music {}
        class Clock {}
        class Color {}
        class Image {}
        class Shape {}
        class Event {}
        class Sprite {}
    }

    namespace Enums {
        enum ShapeType {
            +Circle
            +Rectangle
            +Triangle
            +Polygon
        }

        enum ItemType {
            +ItemEND
            +ItemNONE
            +ItemText
            +ItemMusic
            +ItemAsset
            +ItemSprite
        }

        enum ColourValues {
            +CRed
            +CGreen
            +CBlue
            +CAlpha
        }
    }
    namespace Interfaces {
        interface IComponent {
            +virtual ~IComponent() = default
            +virtual void render(sf::Window& window) = 0
        }
    }

    namespace Utilities {
        class Clock {
            +Clock()
            +stop()
            +start()
            +reset()
            +restart()
            +getElapsedTime(): sf::Time
            +isRunning(): bool
            -sf::Clock _sfml_clock
        }

        class Colour {
            +Colour(UInt8 r, UInt8 g, UInt8 b, UInt8 a)
            +Colour(const sf::Color &colour)
            +getColour(): std::map<Enums::ColourValues, sf::UInt8>
            +getSystemColours(): std::map<std::string, sf::Color>
            - sf::Color _user_colour
            - std::map<std::string, sf::Color> _system_colours;
        }

        class Dimensions {
            +Dimensions()
            +setPosition(int x, int y)
            +setDimensions(int width, int height)
            +getPosition(): sf::Vector2i
            +getDimensions(): sf::Vector2i
            +updatePosition(int x, int y)
            +updateDimensions(int width, int height)
            - sf::IntRect _dimensions
        }

        class CollisionCheck {
            +CollisionCheck()
            +isColliding(const Utilities::Dimensions &Dimensions1, const Utilities::Dimensions &Dimensions2): bool
            +isHovering(const Utilities::Dimensions &Dimensions, const sf::Vector2f &mouse_pos): bool
            +isClicked(const Utilities::Dimensions &Dimensions, const sf::Vector2f &mouse_pos): bool
        }
    }

    namespace Factory {
        class TextFactory {
            +createText(std::string text, std::string font_file): Text
        }
        class ImageFactory {
            +createImage(std::string file_path): Image
        }
        class MusicFactory {
            +createMusic(std::string file_path, bool loop): Music
        }
        class ShapeFactory {
            +createShape(Enums::ShapeType shape_type, Utilities::Colour &colour): Shape
        }
    }


    namespace BaseComponents {

        class Animation {
            +Animation(std::map<unsigned int, sf::Texture> &frames, bool loop = false)
            +setFrameDuration(unsigned int microseconds)
            +createAnimation(std::string animation_name, std::vector<unsigned int> &frames)
            +getAnimation(std::string animation_name): std::vector<unsigned int>
            +updateAnimation(std::string animation_name, std::vector<unsigned int> frames)
            +playAnimation(std::string animation_name)
            +stopAnimation()
            +isPlaying(): bool
            +getAnimationName():std::string
            +getFrameDuration():unsigned int
            +tick(): unsigned int
            -bool _loop
            -unsigned int _frame_duration
            -unsigned int _current_frame
            -std::string _current_animation
            -std::map<unsigned int, sf::Texture> _sfml_textures
            -std::map<std::string, std::vector<unsigned int>> _sfml_animations
        }

        class Text {
            +Text(std::string text, std::string font_file)
            +Text(std::string text, std::string font_file, sf::Vector2f position)
            +setPosition(double x, double y)
            +setText(std::string text)
            +setFont(const std::string &font_file)
            +setFontSize(const unsigned int size)
            +setFontColour(Utilities::Colour colour)
            +setFontFamily(std::string font_file)
            +getText(): std::string
            +getFontFamily(): std::string
            +getColour(): Utilities::Colour
            -sf::Text _sfml_text
            -sf::Font _sfml_font
        }

        class Music {
            +Music(std::string file_path, bool loop = false)
            +play()
            +stop()
            +pause()
            +setVolume(const double volume)
            +setLoop(bool loop)
            +isPlaying(): bool
            +getVolume(): double
            +getLoop(): bool
            -bool _loop
            -sf::Music _sfml_music
            -std::string _file_path
        }

        class Image {
            +Image(const std::string &file_path)
            +setPosition(double x, double y)
            +setScale(double scale)
            +setRotation(double rotation)
            +setVisibility(bool visible)
            +setFillColour(Utilities::Colour colour)
            +removeFillColour()
            +getPosition(): sf::Vector2f
            +getScale(): sf::Vector2f
            +getVisible(): bool
            +getFillColour(): Utilities::Colour
            -bool _visible
            -bool _overlay_present
            -sf::Sprite _sfml_sprite
            -sf::Texture _sfml_texture
            -Utilities::Dimensions _image_info
            -Utilities::Colour _image_overlay

        }

        class Sprite {
            +Sprite()
            +playAnimation(std::string animation_name)
            +setFrame(unsigned int frame_index)
            -std::map<std::string, std::vector<unsigned int>> _animations
            -std::string _current_animation
        }

        class Shape {
            +Shape()
            +setShapeType(Enums::ShapeType type)
            +setPosition(const double x, const double y)
            +setSize(const double width, const double height)
            +setFillColour(const sf::Color &colour)
            +setFillColour(const Utilities::Colour &colour)
            +setFillColour(const sf::Uint8 red, const sf::Uint8 green, const sf::Uint8 blue, const sf::Uint8 alpha = 255)
            +setOutlineColour(const sf::Color &colour)
            +setOutlineColour(const Utilities::Colour &colour)
            +setOutlineColour(const sf::Uint8 red, const sf::Uint8 green, const sf::Uint8 blue, const sf::Uint8 alpha = 255)
            +setOutlineThickness(const double thickness)
            +getOutlineThickness(): double
            +getOutlineColour(): Utilities::Colour
            +getFillColour(): Utilities::Colour
            +getShapeType(): Enums::ShapeType
            -double _outline_thickness;
            -Enums::ShapeType _shape_type;
            -Utilities::Colour _fill_colour;
            -Utilities::Colour _outline_colour;
            -Utilities::Dimensions _shape_dimensions;
        }
    }

    namespace UIComponents {
        class Button {
            +Button()
            +Button(const double width, const double height)
            +setText(const std::string &label)
            +setBorderHoverColour(const Utilities::Colour &colour)
            +setHoverColour(const Utilities::Colour &colour)
            +setTextHoverColour(const Utilities::Colour &colour)
            +setBorderClickedColour(const Utilities::Colour &colour)
            +setClickedColour(const Utilities::Colour &colour)
            +setTextClickedColour(const Utilities::Colour &colour)
            +setOnClickCallback(const std::function<void()> &callback)
            +setHoverEffect(bool enable)
            +isHovered(): bool
            +isClicked(): bool
            -std::string _label
            -std::function<void()> _onClick
            -bool _hoverEffect
            -Shape _shape
            -Text _text
            -Utilities::Colour _borderHoverColour
            -Utilities::Colour _hoverColour
            -Utilities::Colour _textHoverColour
            -Utilities::Colour _borderClickedColour
            -Utilities::Colour _clickedColour
            -Utilities::Colour _textClickedColour
        }

    }

    namespace Input {
        class EventHandler {
            +EventHandler()
            +update()
            +isKeyPressed(sf::Keyboard::Key key): bool
            +isMousePressed(sf::Mouse::Button button): bool
            +getMousePosition(): sf::Vector2i
            +getKeys(): std::vector<sf::Event>
            -sf::Event _sfml_event
        }
    }

    class ItemCreator {
        +ItemCreator()
        +createItem(ItemType item, &args)
        - std::vector<std::map<std::string, Enums::ItemType, IComponent>> _items
    }

    class Main {
        +Main()
        -mainLoop()
        -Initialise()
        -initialiseConnection()
        -create_item()
        Input::EventHandler _events
    }

    ' Base sfml classes
    sf.Event --|> Input.EventHandler
    sf.Clock --|> Utilities.Clock
    sf.Color --|> Utilities.Colour
    sf.Text --|> BaseComponents.Text
    sf.Font --|> BaseComponents.Text
    sf.Music --|> BaseComponents.Music
    sf.Image --|> BaseComponents.Image
    sf.Shape --|> BaseComponents.Shape
    sf.Sprite --|> BaseComponents.Sprite

    ' Enums
    Enums.ItemType --|> ItemCreator
    Enums.ShapeType --|> Factory.ShapeFactory
    Enums.ShapeType --|> BaseComponents.Shape
    Enums.ColourValues --|> Utilities.Colour

    ' The colour links
    Utilities.Colour --|> Factory.ShapeFactory
    Utilities.Colour --|> BaseComponents.Text
    Utilities.Colour --|> BaseComponents.Image
    Utilities.Colour --|> BaseComponents.Shape

    ' Generic component for polymorphism
    Interfaces.IComponent --> Utilities.Clock
    Interfaces.IComponent --> Factory.TextFactory
    Interfaces.IComponent --> Factory.ImageFactory
    Interfaces.IComponent --> Factory.ShapeFactory
    Interfaces.IComponent --> Factory.MusicFactory

    ' Factory components
    Factory.TextFactory --> BaseComponents.Text
    Factory.ImageFactory --> BaseComponents.Image
    Factory.ShapeFactory --> BaseComponents.Shape
    Factory.MusicFactory --> BaseComponents.Music

    ' Item position tracking
    Utilities.Dimensions --|> BaseComponents.Text
    Utilities.Dimensions --|> BaseComponents.Image
    Utilities.Dimensions --|> BaseComponents.Shape
    Utilities.Dimensions --|> Utilities.CollisionCheck

    ' Collision check class linking
    Utilities.CollisionCheck --> BaseComponents.Text
    Utilities.CollisionCheck --> BaseComponents.Image
    Utilities.CollisionCheck --> BaseComponents.Shape

    ' Base components
    BaseComponents.Image --> BaseComponents.Sprite
    BaseComponents.Animation --|> BaseComponents.Sprite
    Utilities.Clock --> BaseComponents.Animation

    ' UI ready components
    BaseComponents.Shape --> UIComponents.Button

    ' All the Components are linked to the ItemCreator
    BaseComponents.Text --|> ItemCreator
    Utilities.CollisionCheck --|> ItemCreator
    BaseComponents.Animation --|> ItemCreator
    BaseComponents.Music --|> ItemCreator
    BaseComponents.Image --|> ItemCreator
    BaseComponents.Sprite --|> ItemCreator
    BaseComponents.Shape --|> ItemCreator
    UIComponents.Button --|> ItemCreator

    ' The root linker
    Input.EventHandler --|> Main: uses
    ItemCreator --> Main
}

@enduml
